change name of plugin
add logic for scanning project directories and extract classname, propoerties, methods

add generating uml files

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "contributes": {
     "commands": [
       {
-        "command": "intersystems-objectscript-class-diagram-view.helloWorld",
-        "title": "Hello World"
+        "command": "intersystems-objectscript-class-diagram-view.generateClassDiagram",
+        "title": "Generate Class Diagram"
       }
     ]
   },
