--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "InterSystems ObjectScript Class Diagram View",
   "description": "",
   "version": "0.0.1",
+  "icon": "images/icon.png",
   "engines": {
     "vscode": "^1.74.0"
   },
