--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "intersystems-objectscript-class-diagram-view",
   "displayName": "InterSystems ObjectScript Class Diagram View",
   "description": "",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "publisher": "JinyaoChen",
   "icon": "images/icon.png",
   "engines": {
     "vscode": "^1.96.0"
